Fete : implemented folder structure and basic code

--- a/package.json
+++ b/package.json
@@ -3,12 +3,26 @@
   "version": "1.0.0",
   "main": "dist/index.js",
   "scripts": {
+    "dev": "nodemon src/index.ts",
+    "start": "node dist/index.js",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Arjun",
   "license": "MIT",
   "description": "",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
+    "mongoose": "^8.6.3",
+    "morgan": "^1.10.0",
+    "nodemon": "^3.1.7",
     "typescript": "^5.6.2"
+  },
+  "devDependencies": {
+    "@types/cookie-parser": "^1.4.7",
+    "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9"
   }
 }
